--- a/src/components/CryptoAddressInput.css
+++ b/src/components/CryptoAddressInput.css
@@ -1,9 +1,9 @@
 .crypto-address-input-container {
-  margin-bottom: 20px; /* Adds space below the input container */
+  margin-bottom: 30px; /* Adds space below the input container */
   padding: 20px; /* Adds padding inside the container */
   border: 1px solid #ccc; /* Adds a border around the container */
   border-radius: 8px; /* Rounds the corners of the container */
-  background-color: #fff; /* Sets the background color of the container */
+  background-color: #f2f1f1; /* Sets the background color of the container */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Adds a shadow to the container */
 }
 
@@ -20,8 +20,8 @@
 .crypto-address-input-container input[type="text"] {
   padding: 15px; /* Adds padding inside the input box */
   margin-bottom: 10px; /* Adds space below the input box */
-  border: 1px solid #ccc; /* Adds a border around the input box */
-  border-radius: 4px; /* Rounds the corners of the input box */
+  border: 1px solid #01d25f; /* Adds a border around the input box */
+  border-radius: 40px; /* Rounds the corners of the input box */
   font-size: 1em; /* Sets the font size of the input box text */
   width: 100%; /* Makes the input box full width */
   max-width: 400px; /* Limits the width of the input box */
@@ -30,7 +30,7 @@
 .crypto-address-input-container button {
   padding: 15px 20px; /* Adds padding inside the button */
   border: none; /* Removes the border of the button */
-  border-radius: 4px; /* Rounds the corners of the button */
+  border-radius: 40px; /* Rounds the corners of the button */
   background-color: #007bff; /* Sets the background color of the button */
   color: white; /* Sets the text color of the button */
   cursor: pointer; /* Changes the cursor to a pointer when hovering */
